implement GOTO Rm and GOSUB Rm instructions
--- test code 1 (expected: 12) ---

R1 = R15
R1 += 9
R0 = 0
GOTO R1
R0 += 1
R0 += 2
R0 += 4
R0 += 8
RET

--- test code 2 (expected: 5) ---

R0 = R15
R1 = R0 + 5
R2 = R14 ' backup
GOSUB R1
R3 = R14
R0 = R3 - R0
R14 = R2 ' restore
RET

--- a/cpuemu.html
+++ b/cpuemu.html
@@ -311,9 +311,22 @@ var CPU = function() {
 			} else if (chk("11100")) { // GOTO n11
 				// not +2 because PC+=2 is done already
 				this.r[15] = norm(this.r[15] + ((getn(0, 11) + 1) << 1));
-			} else if (chk("0100011101110000")) { // RET
-//				alert("ret");
-				return 0;
+			} else if (chk("01000111")) { // GOTO Rm / GOSUB Rm
+				var isgosub = getu(7, 1) === 1;
+				var iname = isgosub ? "GOSUB" : "GOTO";
+				if (getu(0, 3) !== 0) throw "instruction like " + iname + " Rm, but last 3 bits are not `000";
+				var srcidx = getu(3, 4);
+				if (srcidx === 13) throw "using SP for " + iname + " Rm is prohibited";
+				if (srcidx === 15) throw "using PC for " + iname + " Rm is prohibited";
+				if (!isgosub && srcidx == 14) { // RET
+//					alert("ret");
+					return 0;
+				}
+				if ((this.r[srcidx] & 1) === 0) {
+					throw "0 is passed as the LSB of the operand of " + iname + " Rm";
+				}
+				if (isgosub) this.r[14] = norm(this.r[15] | 1);
+				this.r[15] = norm(this.r[srcidx] & 0xfffffffe);
 			} else if (chk("0100001110")) { // BIC Rd, Rm (Rd &= ~Rm)
 				this.r[getu(0, 3)] = this.setflg(norm(this.r[getu(0, 3)] & ~this.r[getu(3, 3)]));
 			} else {
