--- a/cpuemu.html
+++ b/cpuemu.html
@@ -97,6 +97,10 @@ var CPU = function() {
 	};
 	this.step = function() {
 		var iaddr = this.r[15];
+		if (iaddr === 0xDEADBEEE) { // 0xDEADBEEF & 0xfffffffe
+			// instead of stopping execution at RET
+			return 0;
+		}
 		if (iaddr % 2 != 0) {
 			alert ("unaligned instructon read #" + iaddr.toString(16));
 			return 0;
@@ -319,10 +323,10 @@ var CPU = function() {
 				if (srcidx === 13) throw "using SP for " + iname + " Rm is prohibited";
 				if (srcidx === 15) throw "using PC for " + iname + " Rm is prohibited";
 				if ((this.r[srcidx] & 1) === 0) {
-					if (!isgosub && srcidx == 14) { // RET
+//					if (!isgosub && srcidx == 14) { // RET
 //						alert("ret");
-						return 0;
-					}
+//						return 0;
+//					}
 					throw "0 is passed as the LSB of the operand of " + iname + " Rm";
 				}
 				if (isgosub) this.r[14] = norm(this.r[15] | 1);
@@ -414,7 +418,9 @@ window.onload = function() {
 	var reset = function() {
 		cpu.reset();
 		cpu.r[1] = 0x100;
-		cpu.r[15] = 0;
+		cpu.r[13] = 0x1000; // SP
+		cpu.r[14] = 0xDEADBEEF; // LR
+		cpu.r[15] = 0; // PC
 		cpu.mem.ram = [];
 		autoflg = false;
 		get("auto").textContent = "START";
