--- a/cpuemu.html
+++ b/cpuemu.html
@@ -151,6 +151,24 @@ var CPU = function() {
 				this.status.n = (n >> 31) != 0;
 				return n;
 			};
+			this.addsetflg = function(n, m) {
+				n = norm(n);
+				m = norm(m);
+				var r = norm(n + m);
+				var s = 0x80000000;
+				this.status.c = n + m > 0xffffffff;
+				this.status.v = (n & s) == (m & s) && (n & s) != (r & s);
+				return this.setflg(r);
+			};
+			this.subsetflg = function(n, m) {
+				n = norm(n);
+				m = norm(m);
+				var r = norm(n - m);
+				var s = 0x80000000;
+				this.status.c = n >= m;
+				this.status.v = (n & s) != (m & s) && (n & s) != (r & s);
+				return this.setflg(r);
+			};
 			if (chk("00100")) { // Rd = u8
 				this.r[getu(8, 3)] = this.setflg(getu(0, 8));
 			} else if (chk("01000110")) { // Rd = Rm
@@ -168,9 +186,9 @@ var CPU = function() {
 					this.r[dstidx] = srcvalue;
 				}
 			} else if (chk("00110")) { // Rd += u8
-				this.r[getu(8, 3)] = this.setflg(norm(this.r[getu(8, 3)] + getu(0, 8)));
+				this.r[getu(8, 3)] = this.addsetflg(this.r[getu(8, 3)], getu(0, 8));
 			} else if (chk("00111")) { // Rd -= u8
-				this.r[getu(8, 3)] = this.setflg(norm(this.r[getu(8, 3)] - getu(0, 8)));
+				this.r[getu(8, 3)] = this.subsetflg(this.r[getu(8, 3)], getu(0, 8));
 			} else if (chk("10100")) { // Rd = PC + u8
 				this.r[getu(8, 3)] = norm((this.r[15] + 2 + (getu(0, 8) << 2)) & 0xfffffffc);
 			} else if (chk("01000100")) { // Rd += Rm
@@ -191,15 +209,15 @@ var CPU = function() {
 					this.r[dstidx] = norm(this.r[dstidx] + srcvalue);
 				}
 			} else if (chk("0001110")) { // Rd = Rn + u3
-				this.r[getu(0, 3)] = this.setflg(norm(this.r[getu(3, 3)] + getu(6, 3)));
+				this.r[getu(0, 3)] = this.addsetflg(this.r[getu(3, 3)], getu(6, 3));
 			} else if (chk("0001111")) { // Rd = Rn - u3
-				this.r[getu(0, 3)] = this.setflg(norm(this.r[getu(3, 3)] - getu(6, 3)));
+				this.r[getu(0, 3)] = this.subsetflg(this.r[getu(3, 3)], getu(6, 3));
 			} else if (chk("0001100")) { // Rd = Rn + Rm
-				this.r[getu(0, 3)] = this.setflg(norm(this.r[getu(3, 3)] + this.r[getu(6, 3)]));
+				this.r[getu(0, 3)] = this.addsetflg(this.r[getu(3, 3)], this.r[getu(6, 3)]);
 			} else if (chk("0001101")) { // Rd = Rn - Rm
-				this.r[getu(0, 3)] = this.setflg(norm(this.r[getu(3, 3)] - this.r[getu(6, 3)]));
+				this.r[getu(0, 3)] = this.subsetflg(this.r[getu(3, 3)], this.r[getu(6, 3)]);
 			} else if (chk("0100001001")) { // Rd = -Rm
-				this.r[getu(0, 3)] = this.setflg(norm(-this.r[getu(3, 3)]));
+				this.r[getu(0, 3)] = this.subsetflg(0, this.r[getu(3, 3)]);
 			} else if (chk("0100001101")) { // Rd *= Rm
 				// don't do this.r[getu(0, 3)] * this.r[getu(3, 3)], or the result will be inaccurate
 				var ret = 0;
@@ -292,9 +310,11 @@ var CPU = function() {
 				this.checkmem(addr, 4, true);
 				this.mem.set32(addr, this.r[getu(0, 3)]);
 			} else if (chk("00101")) { // Rn - u8
-				this.setflg(norm(this.r[getu(8, 3)] - getu(0, 8)));
+				this.subsetflg(this.r[getu(8, 3)], getu(0, 8));
 			} else if (chk("0100001010")) { // Rn - Rm
-				this.setflg(norm(this.r[getu(0, 3)] - this.r[getu(3, 3)]));
+				this.subsetflg(this.r[getu(0, 3)], this.r[getu(3, 3)]);
+			} else if (chk("0100001011")) { // Rn + Rm
+				this.addsetflg(this.r[getu(0, 3)], this.r[getu(3, 3)]);
 			} else if (chk("0100001000")) { // Rn & Rm
 				this.setflg(norm(this.r[getu(0, 3)] & this.r[getu(3, 3)]));
 			} else if (chk("1101")) { // IF cond GOTO n8
