implement REV, REV16, and REVSH instructions
--- test case 1 ---

R1 = R15
GOTO @prg
DATAL #44332211
@prg
R2 = [R1 + 0]L
R1 += #FC
[R1 + 0]L = R2
R3 = REV(R2)
[R1 + 1]L = R3
R3 = REV16(R2)
[R1 + 2]L = R3
R3 = REVSH(R2)
[R1 + 3]L = R3
RET

-- expected --

44332211
11223344
33441122
00001122

--- test case 2 ---

R1 = R15
GOTO @prg
DATAL #DEADBEEF
@prg
R2 = [R1 + 0]L
R1 += #FC
[R1 + 0]L = R2
R3 = REV(R2)
[R1 + 1]L = R3
R3 = REV16(R2)
[R1 + 2]L = R3
R3 = REVSH(R2)
[R1 + 3]L = R3
RET

-- expected --

DEADBEEF
EFBEADDE
ADDEEFBE
FFFFEFBE

--- driver ---

100 X=USR(#700,0)
110 ?HEX$([1],4);HEX$([0],4)
120 ?HEX$([3],4);HEX$([2],4)
130 ?HEX$([5],4);HEX$([4],4)
140 ?HEX$([7],4);HEX$([6],4)

--- a/cpuemu.html
+++ b/cpuemu.html
@@ -423,6 +423,20 @@ var CPU = function() {
 				var addr = norm(this.r[13] + getu(0, 8) * 4);
 				this.checkmem(addr, 4, true);
 				this.mem.set32(addr, this.r[getu(8, 3)]);
+			} else if (chk("1011101000")) { // Rd = REV(Rm)
+				var v = this.r[getu(3, 3)];
+				v = ((v >>> 8) & 0x00ff00ff) | ((v << 8) & 0xff00ff00);
+				v = ((v >>> 16) & 0x0000ffff) | ((v << 16) & 0xffff0000);
+				this.r[getu(0, 3)] = norm(v);
+			} else if (chk("1011101001")) { // Rd = REV16(Rm)
+				var v = this.r[getu(3, 3)];
+				v = ((v >>> 8) & 0x00ff00ff) | ((v << 8) & 0xff00ff00);
+				this.r[getu(0, 3)] = norm(v);
+			} else if (chk("1011101011")) { // Rd = REVSH(Rm)
+				var v = this.r[getu(3, 3)];
+				v = ((v >>> 8) & 0x000000ff) | ((v << 8) & 0x0000ff00);
+				if (v & 0x8000) v |= 0xffff0000;
+				this.r[getu(0, 3)] = norm(v);
 			} else if (chk("0100001110")) { // BIC Rd, Rm (Rd &= ~Rm)
 				this.r[getu(0, 3)] = this.setflg(norm(this.r[getu(0, 3)] & ~this.r[getu(3, 3)]));
 			} else {
